# subs2cia-remake

./: .gitignore  LICENSE  README.md  pyproject.toml
subs2cia/: __init__.py  __main__.py  cli.py  cli_common.py  cli_common_input_streams.py  cli_common_overwrite.py  cli_common_padding.py  cli_common_subtitle_extraction.py  cli_common_subtitle_mods.py  cli_condense.py  cli_srs.py  ffmpeg_helpers.py  ffprobe_helpers.py  ffprobe_wrapper.py  multi_context_manager.py  path_helpers.py  retiming_helpers.py  subtitles.py  subtitles_ass.py  subtitles_types.py  time_ranges.py  usage_error.py
tests/: __main__.py  test_adjust_time.py  test_cli_common_modify_subs.py  test_multi_context_manager.py  test_time_ranges.py
